argo-workflows/base/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: argo-workflows
  namespace: argo
  annotations:
    nginx.ingress.kubernetes.io/backend-protocol: https
spec:
  ingressClassName: nginx
  rules:
  - http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
           name: argo-server
           port:
             number: 2746
    host: acme.com
